# static_sqlite

./: Cargo.toml  README.md
src/: ffi.rs  lib.rs  sync.rs  tokio.rs
static_sqlite_async/: Cargo.toml
static_sqlite_async/src/: lib.rs
static_sqlite_core/: Cargo.toml
static_sqlite_core/src/: ffi.rs  lib.rs
static_sqlite_ffi/: Cargo.toml  build.rs
static_sqlite_ffi/src/: bindings.rs  lib.rs
static_sqlite_macros/: Cargo.toml
static_sqlite_macros/src/: errors.rs  lib.rs  names.rs  schema.rs
tests/: integration_test.rs
tests/ui/: fk_fails.rs  fk_fails.stderr
