[package]
name = "static_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
static_sqlite_macros = { path = "static_sqlite_macros", version = "0.1.0" }
tokio = { version = "1", features = ["sync"] }
crossbeam-channel = { version = "0.5" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros"] }
