[package]
name = "static_sqlite_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
sqlparser = { version = "0.52", features = ["visitor"] }
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
static_sqlite_core = { path = "../static_sqlite_core" }
